Fixed issue with page jumping to top when closing sidebar

--- a/source/assets/public/articles/index.css
+++ b/source/assets/public/articles/index.css
@@ -42,7 +42,7 @@
   font-weight: normal;
   color: var(--grey);
   font-size: 1.6rem;
-  line-height: 2.6rem;
+  line-height: 2.7rem;
 }
 
 .article__content p {
