--- a/source/assets/public/sidebar/index.css
+++ b/source/assets/public/sidebar/index.css
@@ -36,7 +36,11 @@
   text-align: center;
 }
 
-#sidebar:target {
+/*#sidebar:target {
+  right: 0;
+}*/
+
+.sidebar--open {
   right: 0;
 }
 
